Users no longer need store and visibilty

--- a/app.css
+++ b/app.css
@@ -245,5 +245,5 @@ tr:nth-child(odd){
     cursor: pointer;
 }
 .completion-table tr:hover{
-    background-color: #ffffff;
+    background-color: #f1f1f1;
 }
